# teacher/backend/src/tasks/dto/refresh-kuozhi-progress.dto.ts
@@ -1,0 +1,3 @@
+import { MutationMetaDto } from './mutation-meta.dto';
+
+export class RefreshKuozhiProgressDto extends MutationMetaDto {}
